Página sobre o projeto atualizada

--- a/pethelper/about.html
+++ b/pethelper/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>PET HELPER - Doe, Adote, ajude um animal abandonado</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,15 +48,15 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
-                        <a href="about.html">About</a>
+                        <a href="about.html">Sobre o Pet Helper</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="portfolio-2-col.html">Adote!</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Contato</a>
                     </li>
-                    <li class="dropdown">
+            <!--        <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -109,7 +109,7 @@
                                 <a href="pricing.html">Pricing Table</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -123,13 +123,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About
-                    <small>Subheading</small>
+                <h1 class="page-header">Sobre o Pet Helper
+                    <!-- <small>Subheading</small> -->
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">About</li>
+                    <li class="active">Sobre o Pet Helper</li>
                 </ol>
             </div>
         </div>
@@ -138,13 +138,12 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img class="img-responsive" src="https://fbcdn-photos-h-a.akamaihd.net/hphotos-ak-xft1/v/t1.0-0/s480x480/11202868_461051524096106_8636821755437499680_n.jpg?oh=db10dba82a3bbf78c224861e3b615397&oe=56B5084C&__gda__=1455381086_c4baf6a1cdff83e4b7250e625785f8e7" alt="">
             </div>
             <div class="col-md-6">
-                <h2>About Modern Business</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+                <h2>O que é o Pet Helper</h2>
+                <p>No estado de Alagoas não é incomum encontrar animais abandonados nas ruas e avenidas das cidades, assim como acontece em todo o país. Muitas instituições sem fins lucrativos e projetos criados por pessoas comuns lutam para acolher, cuidar e encaminhar esses animais a novas famílias. No entanto, esse trabalho demanda custos, tais como: gastos com medicamentos, ração, material de limpeza, entre outros, que só podem ser cobertos por meio de doação da população e/ou patrocinadores, A ideia deste projeto é contribuir para que mais pessoas conheçam o trabalho realizado em defesa do animais e possa contribuir de alguma forma para manutenção deste trabalho.
+</p>
             </div>
         </div>
         <!-- /.row -->
@@ -152,127 +151,72 @@
         <!-- Team Members -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
+                <h2 class="page-header">Nossa Equipe</h2>
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/12196017_461050257429566_7554459715253002372_n.jpg?oh=fae5f2237528ee0ab33b37d9430e4c34&oe=56858006&__gda__=1456277722_b5e082f796fcaeb218471d9367644c55" alt="">
                     <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
+                        <h3>Felipe Moura<br>
+                            <small>Programador/FrontEnd</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
+                            <li><a href="https//www.facebook.com/felipe.moura.18041092"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
+                            <!-- <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11222516_461050260762899_5105773261855162875_n.jpg?oh=e9bd366994907edd0f5ac18aa1172242&oe=56CA69DA" alt="">
                     <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
+                        <h3>Alana Messias<br>
+                            <small>Programadora</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
+                            <li><a href="https://www.facebook.com/alanajvmessias/"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
+                            <!-- <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
+                            </li>-->
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/11666260_461050234096235_8128499547475203354_n.jpg?oh=58db19238bc6c1803fbdb5480bd8a22c&oe=56B95EB2&__gda__=1456051466_546260cc2ffe26af9b16504d2fb94b4e" alt="">
                     <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
+                        <h3>Gisela Conti<br>
+                            <small>Webdesigner/FrontEnd</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
+                            <li><a href="https://www.facebook.com/gisaconti/"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
+                            <li><a href="https://br.linkedin.com/pub/gisela-lima-conti/23/23b/255"><i class="fa fa-2x fa-linkedin-square"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
+                            <li><a href="https://twitter.com/gisaconti"><i class="fa fa-2x fa-twitter-square"></i></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+           
             </div>
         </div>
         <!-- /.row -->
 
         <!-- Our Customers -->
-        <div class="row">
+       <!-- <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Our Customers</h2>
             </div>
@@ -294,7 +238,7 @@
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <hr>
