Inserção de imagens e texos na pagina ADOTE

--- a/pethelper/portfolio-2-col.html
+++ b/pethelper/portfolio-2-col.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>PET HELPER - Doe, Adote, ajude um animal abandonado</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,21 +48,22 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">Sobre o Pet Helper</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                    <li class="active">
+                        <a href="portfolio-2-col.html">Adote!</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Contato</a>
                     </li>
-                    <li class="dropdown active">
+            <!--        <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="portfolio-1-col.html">1 Column Portfolio</a>
                             </li>
-                            <li class="active">
+                            <li>
                                 <a href="portfolio-2-col.html">2 Column Portfolio</a>
                             </li>
                             <li>
@@ -109,7 +110,7 @@
                                 <a href="pricing.html">Pricing Table</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -123,13 +124,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Two Column Portfolio
-                    <small>Subheading</small>
+                <h1 class="page-header">Adote!!!
+                    
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Two Column Portfolio</li>
+                    <li class="active">Adote!!!</li>
                 </ol>
             </div>
         </div>
@@ -139,21 +140,21 @@
         <div class="row">
             <div class="col-md-6 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/s851x315/12190017_461055090762416_3564874528169338140_n.jpg?oh=fef3862bbdd7ab631059aff4263f2804&oe=56C91484" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project One</a>
+                    <a href="portfolio-item.html">Totó</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Lindo cachorro da raça Vira.</p>
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12065959_461055100762415_474056868069567776_n.jpg?oh=e4e19223a6208d031e274e27e1d8a44a&oe=56B261E7" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Two</a>
+                    <a href="portfolio-item.html">Docinho</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Quero wdkwidhpwd</p>
             </div>
         </div>
         <!-- /.row -->
@@ -162,16 +163,16 @@
         <div class="row">
             <div class="col-md-6 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/12004007_461055047429087_8764331877346828572_n.jpg?oh=52472d2501f16c07c4107915208e9e64&oe=5686D071" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Three</a>
+                    <a href="portfolio-item.html">Denguinhop</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xtp1/v/t1.0-9/12109161_461055054095753_6740018890406164028_n.jpg?oh=b921c9685529b05bc46d0a785579f433&oe=56BCBD88&__gda__=1455306942_2662747d61ce5e409eff3756e35a2575" alt="">
                 </a>
                 <h3>
                     <a href="portfolio-item.html">Project Four</a>
@@ -185,7 +186,7 @@
         <div class="row">
             <div class="col-md-6 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xla1/v/t1.0-9/12042682_461055050762420_4627772893155368854_n.jpg?oh=7a4674b0ee3e7cdfc18b3aca6611bc28&oe=56C19B7D&__gda__=1454814928_af8636bc883d0c6a0d186c14d08b27b5" alt="">
                 </a>
                 <h3>
                     <a href="portfolio-item.html">Project Five</a>
@@ -194,7 +195,7 @@
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xft1/v/t1.0-9/12191555_461055087429083_8526545001357331503_n.jpg?oh=ccbe59ecc13427488696d8a705cbfd06&oe=56C97B61&__gda__=1455862763_25ece358879f34e5c9e3291a57cd2bf4" alt="">
                 </a>
                 <h3>
                     <a href="portfolio-item.html">Project Six</a>
@@ -206,7 +207,7 @@
 
         <hr>
 
-        <!-- Pagination -->
+        <!-- Pagination 
         <div class="row text-center">
             <div class="col-lg-12">
                 <ul class="pagination">
@@ -242,7 +243,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Pet Helper 2015</p>
                 </div>
             </div>
         </footer>
