--- a/pethelper/portfolio-item.html
+++ b/pethelper/portfolio-item.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>PET HELPER - Doe, Adote, ajude um animal abandonado</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,15 +48,15 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">Sobre o Pet Helper</a>
+                    </li>
+                    <li class="active">
+                        <a href="portfolio-2-col.html">Adote!</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="contact.html">Contato</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                    <li class="dropdown active">
+            <!--        <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -71,7 +71,7 @@
                             <li>
                                 <a href="portfolio-4-col.html">4 Column Portfolio</a>
                             </li>
-                            <li class="active">
+                            <li>
                                 <a href="portfolio-item.html">Single Portfolio Item</a>
                             </li>
                         </ul>
@@ -109,7 +109,7 @@
                                 <a href="pricing.html">Pricing Table</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -123,13 +123,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item
-                    <small>Subheading</small>
+                <h1 class="page-header">Totó
+                    
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Portfolio Item</li>
+                    <li class="active">Totó</li>
                 </ol>
             </div>
         </div>
@@ -189,10 +189,16 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Instituição Responsável</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                </a>
+            </div>
+
+          <!--  <div class="col-sm-3 col-xs-6">
                 <a href="#">
                     <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
                 </a>
@@ -208,13 +214,7 @@
                 <a href="#">
                     <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
                 </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
+            </div>-->
 
         </div>
         <!-- /.row -->
