--- a/pethelper/about.html
+++ b/pethelper/about.html
@@ -42,19 +42,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Pet Helper</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active">
-                        <a href="about.html">Sobre o Pet Helper</a>
+                    <li>
+                        <a href="about.html">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Doar</a>
                     </li>
                     <li>
                         <a href="portfolio-2-col.html">Adote!</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contato</a>
                     </li>
             <!--        <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
@@ -110,6 +110,14 @@
                             </li>
                         </ul>
                     </li>-->
+                      <li>
+                        <a href="contact.html">Parceiros</a>
+                    </li>
+                     <li>
+                        <a href="contact.html">Contato</a>
+                    </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -247,7 +255,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Pet Helper 2015</p>
                 </div>
             </div>
         </footer>
