--- a/pethelper/contact.html
+++ b/pethelper/contact.html
@@ -47,16 +47,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                     <li>
                         <a href="about.html">Sobre</a>
                     </li>
                     <li>
                         <a href="services.html">Doar</a>
                     </li>
                     <li>
-                        <a href="contact.html">Adote</a>
+                        <a href="portfolio-2-col.html">Adote!</a>
                     </li>
-                    <li class="dropdown">
+                   <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pets <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -75,7 +75,7 @@
                                 <a href="portfolio-item.html">Single Portfolio Item</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -225,7 +225,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Pet Helper 2015</p>
                 </div>
             </div>
         </footer>
