--- a/pethelper/portfolio-2-col.html
+++ b/pethelper/portfolio-2-col.html
@@ -42,20 +42,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Pet Helper</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="about.html">Sobre o Pet Helper</a>
+                <li>
+                        <a href="about.html">Sobre</a>
                     </li>
                     <li>
-                    <li class="active">
-                        <a href="portfolio-2-col.html">Adote!</a>
+                        <a href="services.html">Doar</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contato</a>
+                        <a href="portfolio-2-col.html">Adote</a>
                     </li>
             <!--        <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
@@ -111,6 +110,14 @@
                             </li>
                         </ul>
                     </li>-->
+                     <li>
+                        <a href="contact.html">Parceiros</a>
+                    </li>
+                     <li>
+                        <a href="contact.html">Contato</a>
+                    </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
